k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    app.kubernetes.io/part-of: voting-app
